--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <span class="url" contenteditable="true">stackoverflow.com</span>
               </div>
             </a>
-            <a href="#" id="link2">
+            <a href="https://github.com/Sujitcs" id="link2">
               <i class="fa-brands fa-github"></i>
               <div class="label">
                 <span class="name">Github</span>
@@ -111,7 +111,7 @@
                 <span class="url">spotify.com</span>
               </div>
             </a>
-            <a href="https://netflix.com">
+<!--             <a href="https://netflix.com">
               <img src="https://iili.io/HMIU1g2.png" style="height: 24px; width: 24px;">
               <div class="label">
                 <span class="name">Netflix</span>
@@ -124,7 +124,7 @@
                 <span class="name">Xbox</span>
                 <span class="url">xbox.com</span>
               </div>
-            </a>
+            </a> -->
           </div>
       </div>
     </div>
