--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
            	 </button>--> 
             <div class="social-buttons">
 		<a href="https://web.telegram.org/a/" class="social-button social-button--telegram" aria-label="Telegram">
-                <i class="fab fa-telegram"></i>
-              </a>
+    <i class="fa-brands fa-telegram"></i>
+  </a>
 		<a href="https://web.whatsapp.com/" class="social-button social-button--whatsapp" aria-label="Whatsapp">
                 <i class="fab fa-whatsapp"></i>
               </a>
