--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
             <input type="text" placeholder="Search anything" id="search" />
           </div>
           <button id="image-button" onclick="googleSearch();" type="button">
-            <i class="fa-regular fa-search"></i>
-          </button>
-          <button id="mic-button" type="button">
-            <i class="fa-regular fa-microphone"></i>
-          </button>
+    <i class="fa-solid fa-search"></i>
+  </button>
+
+  <button id="mic-button" type="button">
+    <i class="fa-solid fa-microphone"></i>
+  </button>
           </div>
           <div id="apps-container">
             <a href="https://stackoverflow.com/" id="link">
